@@ -285,7 +285,9 @@ void bind_torrent_info()
         .value("source_tex", announce_entry::source_tex)
     ;
 
+#if BOOST_VERSION > 104200
     implicitly_convertible<boost::intrusive_ptr<torrent_info>, boost::intrusive_ptr<const torrent_info> >();
     boost::python::register_ptr_to_python<boost::intrusive_ptr<const torrent_info> >();
+#endif
 }
 
