@@ -1,3 +1,4 @@
+	* fix boost-1.42 support for python bindings
 	* fix memory allocation issue (virtual addres space waste) on windows
 
 0.16.11 release
